# RangersFramework

./: .gitignore  CMakeLists.txt  README.md
Framework/: .gitignore  CMakeLists.txt  main.cpp
Framework/core/inc/: CoreMain.h
Framework/core/src/: CoreMain.cpp
Framework/core/ui/inc/: PlatformExtensions.h  RmlShell.h  UIMain.h
Framework/core/ui/src/: PlatformExtensions.cpp  RendererExtensions.cpp  RmlShell.cpp  ShellFileInterface.cpp  UIMain.cpp
Framework/game-objects/2424/inc/: MainLoop.h  SE.h  TAsteroid.h  TBonus.h  TConstellation.h  TEther.h  TGalaxy.h  THole.h  TItem.h  TList.h  TObject.h  TPlanet.h  TPlayer.h  TScript.h  TShip.h  TStar.h  TThreadEC.h  Tab.h  Tf.h  VMT.h  asm.h  declarations.h  defines.h  pointers.h  structs.h
Framework/game-objects/2424/src/: MainLoop.cpp  MainLoopAsm.asm  TAsteroid.cpp  TConstellation.cpp  TEther.cpp  TGalaxy.cpp  TGalaxyAsm.asm  THole.cpp  TItem.cpp  TList.cpp  TObject.cpp  TPlanet.cpp  TPlayer.cpp  TScript.cpp  TShip.cpp  TStar.cpp  TThreadEC.cpp  Tab.cpp  Tf.cpp  VMT.cpp
Framework/libs/RmlUIBackend/: CMakeLists.txt
Framework/libs/RmlUIBackend/Backends/: RmlUi_Backend.h  RmlUi_Backend_Win32_VK.cpp  RmlUi_Renderer_VK.cpp
Framework/libs/RmlUIBackend/Backends/RmlUi_Vulkan/: ShadersCompiledSPV.h
Framework/modules/inc/: DateTime.h  File.h  Logger.h  MathHelper.h  OpcodeHelper.h  Path.h  Resolution.h  Strings.h  Tests.h
Framework/modules/src/: DateTime.cpp  File.cpp  Logger.cpp  MathHelper.cpp  OpcodeHelper.cpp  Path.cpp  Resolution.cpp  Strings.cpp  Tests.cpp
Injector/: CMakeLists.txt  app.rc  app.res  main.cpp
